samples/_failures_safe/1761711316_60f9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01556f4a.c: In function ‘main’:
./samples/SAFE/__tmp_01556f4a.c:160:11: error: expected ‘;’ at end of input
  160 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_01556f4a.c:160:5: error: expected declaration or statement at end of input
  160 |     printf
      |     ^~~~~~
